--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -15,6 +15,11 @@
   border: 1px solid $grey;
   min-width: 390px;
   font-family: $secondary-font-stack;
+
+  &::placeholder {
+    opacity: 0.2;
+    font-style: italic;
+  }
 }
 
 .filter__name {
